# smart-comfyui-gallery

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER_HELP.md  Dockerfile  LICENSE  Makefile  README.md  __init__.py  compose-exhibit.yaml  compose.yaml  config.json  config.json.example  docker_init.bash  pyproject.toml  redesign.md  requirements.txt  smartgallery.py  smartgallery_install.bat  test_config.py
docs/: DOCKER_HELP.md  install-update.md  installation.md
experiments/: README.md  smartgallery.py
experiments/templates/: index.html
js/: galleryConfig.css  galleryConfig.js  gallerySettings.js
templates/: exhibition.html  exhibition_login.html  index.html
templates/modals/: remix_modal.html  user_manager_module.html
tests/: conftest.py  test_basic.py  test_file_operations.py  test_folder_management.py  test_metadata.py  test_smartgallery_features.py  test_workflow_extraction.py  verify_config_structure.py
web/: gallery.js
