[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-comfyui-gallery"
version = "1.38.1"
description = "A visual hub for ComfyUI with universal workflow recall, upload magic, intelligent organization, and advanced workflow metadata search."
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "Flask",
    "flask-cors",
    "Pillow",
    "opencv-python",
    "tqdm"
]

[project.urls]
Repository = "https://github.com/opj161/smart-comfyui-gallery"

[tool.setuptools]
py-modules = ["smartgallery"]

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["js*", "assets*", "static*", "templates*"]

[tool.comfy]
# This section is used by the ComfyUI Registry
PublisherId = "opj161"
DisplayName = "Smart Gallery"
# Optional: Add a URL to an icon for a professional look in the registry
# Icon = "https://raw.githubusercontent.com/opj161/smart-comfyui-gallery/main/assets/icon.png"
